# heatwave

./: .gitignore  README.md
.github/: dependabot.yaml
.github/workflows/: ci_java.yaml
algorithms/: README.md  pyproject.toml
algorithms/src/algorithms/: array_based_algorithm.py  window_functions_based_algorithm.py
algorithms/tests/: test_array_based_algorithm.py  test_window_functions_based_algorithm.py
config/: google_checks.xml
data-exploration/: README.md  data-exploration.ipynb  pyproject.toml
heatwave-core/: Dockerfile  README.md  heatwaves.txt  pom.xml
heatwave-core/src/main/java/org/michaelheinecke/: HeatWaveApp.java
heatwave-core/src/main/java/org/michaelheinecke/heatwave/: DailyTemperatureReading.java  HeatWave.java  HeatWaveApp.java
heatwave-core/src/test/java/org/michaelheinecke/heatwave/: HeatWaveTest.java
ingestion/: README.md  download_data.sh  ingestion.py  pyproject.toml
